--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:styles": "stylelint '**/*.scss'"
   },
   "dependencies": {
     "classnames": "^2.3.1",
@@ -22,7 +23,14 @@
     "autoprefixer": "^10.4.4",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
-    "sass": "^1.49.9"
+    "sass": "^1.49.9",
+    "stylelint": "^14.6.1",
+    "stylelint-config-css-modules": "^4.1.0",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-recommended": "^7.0.0",
+    "stylelint-config-recommended-scss": "^6.0.0",
+    "stylelint-selector-bem-pattern": "^2.1.1",
+    "stylelint-webpack-plugin": "^3.2.0"
   },
   "browserslist": [
     ">0.3%",
