--- a/package.json
+++ b/package.json
@@ -1,41 +1,47 @@
 {
-  "name": "@charonium/frontend",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "lint:styles": "stylelint '**/*.scss'"
-  },
-  "dependencies": {
-    "classnames": "^2.3.1",
-    "next": "12.1.0",
-    "postcss-flexbugs-fixes": "^5.0.2",
-    "postcss-import": "^14.1.0",
-    "postcss-preset-env": "^7.4.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "tailwindcss": "^3.0.23"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.4",
-    "eslint": "8.11.0",
-    "eslint-config-next": "12.1.0",
-    "sass": "^1.49.9",
-    "stylelint": "^14.6.1",
-    "stylelint-config-css-modules": "^4.1.0",
-    "stylelint-config-prettier": "^9.0.3",
-    "stylelint-config-recommended": "^7.0.0",
-    "stylelint-config-recommended-scss": "^6.0.0",
-    "stylelint-selector-bem-pattern": "^2.1.1",
-    "stylelint-webpack-plugin": "^3.2.0"
-  },
-  "browserslist": [
-    ">0.3%",
-    "not ie 11",
-    "not dead",
-    "not op_mini all"
-  ]
+	"name": "@charonium/frontend",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"build:export": "next build && next export",
+		"start": "next start",
+		"start:static": "serve out",
+		"lint": "next lint",
+		"lint:styles": "stylelint '**/*.scss'"
+	},
+	"dependencies": {
+		"classnames": "^2.3.1",
+		"next": "12.1.0",
+		"postcss-flexbugs-fixes": "^5.0.2",
+		"postcss-import": "^14.1.0",
+		"postcss-preset-env": "^7.4.3",
+		"react": "17.0.2",
+		"react-dom": "17.0.2",
+		"serve": "^13.0.2",
+		"tailwindcss": "^3.0.23"
+	},
+	"devDependencies": {
+		"autoprefixer": "^10.4.4",
+		"eslint": "8.11.0",
+		"eslint-config-next": "12.1.0",
+		"postcss-bem-linter": "^3.3.0",
+		"prettier": "^2.6.1",
+		"sass": "^1.49.9",
+		"stylelint": "^14.6.1",
+		"stylelint-config-css-modules": "^4.1.0",
+		"stylelint-config-prettier": "^9.0.3",
+		"stylelint-config-recommended": "^7.0.0",
+		"stylelint-config-recommended-scss": "^6.0.0",
+		"stylelint-prettier": "^2.0.0",
+		"stylelint-selector-bem-pattern": "^2.1.1",
+		"stylelint-webpack-plugin": "^3.2.0"
+	},
+	"browserslist": [
+		">0.3%",
+		"not ie 11",
+		"not dead",
+		"not op_mini all"
+	]
 }
