--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@charonium/frontend",
-	"version": "0.1.0",
+	"version": "0.1.1-alpha.0",
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
@@ -11,7 +11,8 @@
 		"lint": "next lint",
 		"lint:styles": "stylelint '**/*.scss'",
 		"release": "standard-version -a",
-		"release:dry": "standard-version -a --dry-run"
+		"release:dry": "standard-version --dry-run",
+		"release:pre": "standard-version --prerelease alpha"
 	},
 	"dependencies": {
 		"classnames": "^2.3.1",
