--- a/storybook/package.json
+++ b/storybook/package.json
@@ -5,6 +5,7 @@
 	"main": "index.js",
 	"devDependencies": {
 		"@babel/core": "^7.17.8",
+		"@geometricpanda/storybook-addon-badges": "^0.2.1",
 		"@storybook/addon-actions": "^6.4.19",
 		"@storybook/addon-docs": "^6.4.19",
 		"@storybook/addon-essentials": "^6.4.19",
