--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
 		"tailwindcss": "^3.0.23"
 	},
 	"devDependencies": {
+		"@tailwindcss/aspect-ratio": "^0.4.0",
+		"@tailwindcss/forms": "^0.5.0",
+		"@tailwindcss/typography": "^0.5.2",
 		"autoprefixer": "^10.4.4",
 		"eslint": "8.11.0",
 		"eslint-config-next": "12.1.0",
@@ -46,7 +49,9 @@
 		"stylelint-config-recommended-scss": "^6.0.0",
 		"stylelint-prettier": "^2.0.0",
 		"stylelint-selector-bem-pattern": "^2.1.1",
-		"stylelint-webpack-plugin": "^3.2.0"
+		"stylelint-webpack-plugin": "^3.2.0",
+		"tailwindcss-debug-screens": "^2.2.1",
+		"tailwindcss-fluid": "^0.2.0"
 	},
 	"browserslist": [
 		">0.3%",
