--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,3 @@
 {
-    "recommendations": [
-        "stylelint.vscode-stylelint",
-    ]
+	"recommendations": ["stylelint.vscode-stylelint", "Nixon.env-cmd-file-syntax"]
 }
