--- a/package.json
+++ b/package.json
@@ -28,10 +28,15 @@
 		"postcss-preset-env": "^7.4.3",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
+		"react-markdown": "^8.0.3",
+		"rehype-raw": "^6.1.1",
+		"rehype-sanitize": "^5.0.1",
+		"remark-gfm": "^3.0.1",
 		"serve": "^13.0.2",
 		"tailwindcss": "^3.0.23"
 	},
 	"devDependencies": {
+		"@svgr/webpack": "^6.2.1",
 		"@tailwindcss/aspect-ratio": "^0.4.0",
 		"@tailwindcss/forms": "^0.5.0",
 		"@tailwindcss/typography": "^0.5.2",
