--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 	"dependencies": {
 		"classnames": "^2.3.1",
 		"dayjs": "^1.11.1",
+		"feather-icons-react": "^0.5.0",
 		"next": "12.1.0",
 		"postcss-flexbugs-fixes": "^5.0.2",
 		"postcss-import": "^14.1.0",
