--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
 		"classnames": "^2.3.1",
 		"dayjs": "^1.11.1",
 		"feather-icons-react": "^0.5.0",
+		"html-entities": "^2.3.3",
 		"next": "12.1.0",
 		"postcss-flexbugs-fixes": "^5.0.2",
 		"postcss-import": "^14.1.0",
 		"postcss-preset-env": "^7.4.3",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
+		"react-mailchimp-subscribe": "^2.1.3",
 		"react-markdown": "^8.0.3",
 		"rehype-raw": "^6.1.1",
 		"rehype-sanitize": "^5.0.1",
