--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"rehype-sanitize": "^5.0.1",
 		"remark-gfm": "^3.0.1",
 		"serve": "^13.0.2",
+		"shopify-buy": "^2.15.1",
 		"tailwindcss": "^3.0.23"
 	},
 	"devDependencies": {
