--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"dayjs": "^1.11.1",
 		"feather-icons-react": "^0.5.0",
 		"html-entities": "^2.3.3",
+		"js-cookie": "^3.0.1",
 		"next": "12.1.0",
 		"postcss-flexbugs-fixes": "^5.0.2",
 		"postcss-import": "^14.1.0",
