--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
 		"remark-gfm": "^3.0.1",
 		"serve": "^13.0.2",
 		"shopify-buy": "^2.15.1",
-		"tailwindcss": "^3.0.23"
+		"tailwindcss": "^3.0.23",
+		"web3": "^1.7.3",
+		"web3modal": "^1.9.7"
 	},
 	"devDependencies": {
 		"@svgr/webpack": "^6.2.1",
