--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"build-storybook": "build-storybook"
 	},
 	"dependencies": {
+		"@palmabit/react-cookie-law": "^0.7.0",
 		"classnames": "^2.3.1",
 		"dayjs": "^1.11.1",
 		"feather-icons-react": "^0.5.0",
